# auto-file-organizer

./: .gitignore  LICENSE  README.md  autofile.bat  autoorganizer.py  exception_handling.py  file_ignore.py  main.py  model.py  pyproject.toml  type_map.py  undo.py
auto_file_organizer/: autoorganizer.py  file_ignore.py  main.py  type_map.py
